src/deployments/unifi-proxy/liams-deployment.yaml
####################################
#
#   #     #                        
#   ##    #  ####  # #    # #    # 
#   # #   # #    # # ##   #  #  #  
#   #  #  # #      # # #  #   ##   
#   #   # # #  ### # #  # #   ##   
#   #    ## #    # # #   ##  #  #  
#   #     #  ####  # #    # #    #
#
####################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi
  labels:
    meta.helm.sh/release-namespace: "unifi"
    meta.helm.sh/release-name: "unifi"
    app.kubernetes.io/managed-by: "Helm"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: unifi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unifi
    spec:
      serviceAccountName: unifi
      containers:
      - name: unifi
        image: nginx
        ports:
        - containerPort: 80
        resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits: 
              memory: "128Mi"
              cpu: "500m"
        volumeMounts:
        - name: unifi-conf
          mountPath: "/etc/nginx/conf.d/"
      volumes:
      - name: unifi-conf
        configMap:
          name: unifi-config

####################################
#
#     #####                                       
#    #     # ###### #####  #    # #  ####  ###### 
#    #       #      #    # #    # # #    # #      
#     #####  #####  #    # #    # # #      #####  
#          # #      #####  #    # # #      #      
#    #     # #      #   #   #  #  # #    # #      
#     #####  ###### #    #   ##   #  ####  ######
#
####################################
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
  labels:
    meta.helm.sh/release-namespace: "unifi"
    meta.helm.sh/release-name: "unifi"
    app.kubernetes.io/managed-by: "Helm"
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/name: unifi

####################################
#
#   ###                                           
#    #  #    #  ####  #####  ######  ####   ####  
#    #  ##   # #    # #    # #      #      #      
#    #  # #  # #      #    # #####   ####   ####  
#    #  #  # # #  ### #####  #           #      # 
#    #  #   ## #    # #   #  #      #    # #    # 
#   ### #    #  ####  #    # ######  ####   ####  
#
####################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testkavanet-ingress
  labels:
    meta.helm.sh/release-namespace: "unifi"
    meta.helm.sh/release-name: "unifi"
    app.kubernetes.io/managed-by: "Helm"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - unifi.imtl.co.uk
    secretName: unifi-imtl-co-uk-tls
  rules:
  - host: unifi.imtl.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unifi
            port:
              number: 80

####################################
#
#   #####                                   #     #               
#  #     #  ####  #    # ###### #  ####     ##   ##   ##   #####  
#  #       #    # ##   # #      # #    #    # # # #  #  #  #    # 
#  #       #    # # #  # #####  # #         #  #  # #    # #    # 
#  #       #    # #  # # #      # #  ###    #     # ###### #####  
#  #     # #    # #   ## #      # #    #    #     # #    # #      
#   #####   ####  #    # #      #  ####     #     # #    # #      
#
####################################
